# rasa-chat

./: .bitmap  .gitignore  README.md  asset-manifest.json  index.html  package.json  precache-manifest.f4f2bce93d32b9643cde60cad8350816.js  service-worker.js
example/: README.md  package.json
example/public/: index.html  manifest.json
example/src/: App.js
public/: index.html
rasa-schemas/: config.yml  domain.yml  pyproject.toml
rasa-schemas/actions/: actions.py
rasa-schemas/actions/Samples/: BrandWidget.json  CartWidget.json  CitySelectWidget.json  LocationOutlineWidget.json  MapPopupWidget.json  PaymentWidget.json  PersonalInfoWidget.json  RateWidget.json  SizeWidget.json  UserLocationWidget.json
rasa-schemas/actions/Samples/backup/: BrandWidget.json  RateWidget.json  ReturnWidget.json
rasa-schemas/data/: nlu.yml  rules.yml
src/: App.js  Chat.jsx  default.css  index.js  index0.js  style.scss
src/assets/data/: widgets.js
src/assets/scss/: Chat.scss  TestWidgets.scss
src/assets/scss/global/: _map.scss  (+2 more)
src/components/Chat/: ComponentsManager.jsx  Index.jsx  helpers.js
src/components/TestWidgets/: ColorsPicker.jsx  Index.jsx  StyleSheetBuilder.jsx
static/css/: 2.245fb51a.chunk.css  2.245fb51a.chunk.css.map  main.4c0f4f7c.chunk.css  main.4c0f4f7c.chunk.css.map
static/js/: 2.3566c542.chunk.js  2.3566c542.chunk.js.LICENSE.txt  2.3566c542.chunk.js.map  main.1f796250.chunk.js  main.1f796250.chunk.js.LICENSE.txt  main.1f796250.chunk.js.map  runtime-main.a8767dee.js  runtime-main.a8767dee.js.map
test-library/: package.json
test-library/src/: App.js
(+61 files in other folders)
